# py-hardwario

./: cli.py  pyproject.toml
.github/workflows/: main.yaml
