[tool.poetry]
name = "hardwario"
version = "1.0.0"
description = "HARDWARIO Command Line Tool"
authors = ["Karel Blavka <karel.blavka@hardwario.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hardwario/py-hardwario"
repository = "https://github.com/hardwario/py-hardwario"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
hardwario-chester = ">=v1.25.0"
hardwario-cloud = ">=1.5.0"
pyinstaller = "^4.8.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyinstaller]
# Include packages and files
# NOTE: Replace `my_script.py` with the actual name of your main script
# NOTE: Replace `my_package` with the actual name of your package
# NOTE: Replace `my_icon.ico` with the actual name of your icon file (optional)
# NOTE: Replace `my_app_name` with the actual name of your application
name = "hardwario"
onefile = true
console = true
# icon = "hardwario.ico"
# add_data = "src/hardwario/data_file.txt:hardwario/"
# hidden_imports = ["my_package.sub_module"]

[tool.pyinstaller.darwin]
name = "hardwario"
iconfile = "hardwario.icns"

[tool.pyinstaller.linux]
# Linux specific options

[tool.pyinstaller.win32]
# Windows specific options
